--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -7,7 +7,8 @@ on:
       - environment
 
 jobs:
-  greet-me:
+  manage_environment:
+    name: "Manage Environment - ${{ github.event.client_payload.environment }} on ${{ github.event.client_payload.repository }}"
     runs-on: ubuntu-latest
     steps:
       - env:
